Version 1.10.6+dev:
 * Language and i18n:
   * Updated translations: Chinese (Traditional), Indonesian, Old English,
     Polish, Portuguese, Portuguese (Brazil), Russian, Vietnamese
 * User interface:
   * Fixed (bug #17220): Cursor in gui2 text box now behaves appropriately after
     text box overflow occurs.
   * Fix viewport centering issues with actions such as the Next Unit command,
     and the [scroll_to], [scroll_to_unit], and [message] WML actions (bug #18793).
 * WML engine:
   * Fixed invalid memory access issues caused by subnamespaced persistent WML
     variables (bug #20385).
   * Fixed incorrect image path function name in error messages generated by
     using ~CROP() with negative coordinates.
 * Miscellaneous and bug fixes
   * Improved: Autorevision based revision numbers in CMake.
   * Fixed the recall list sometimes getting confused when dismissing a recall.
   * Prevent unchecked memory access in cut_surface()

Version 1.10.6:
 * Campaigns:
   * The Rise of Wesnoth:
     * Fix bug #16772: AI won't attack
   * Son of the Black Eye:
     * Prevent infinite loop if fewer than two transport ships (bug #20389)
 * Language and i18n:
   * Updated translations: British English, Chinese (Simplified),
     Chinese (Traditional), Dutch, Estonian, French, Galician, German,
     Hungarian, Italian, Latin, Portuguese, Portuguese (Brazil),
     Scottish Gaelic, Serbian, Slovak, Vietnamese
 * Multiplayer:
   * Moved new lobby option in Preferences -> Multiplayer to Advanced
     Preferences and clarified description
 * User interface:
   * Scale down unit baseframes larger than 72x72 in the Recruit and Recall
     dialogs to prevent all list entries from being enlarged to fit
 * WML engine:
   * Fixed [disallow_end_turn] losing effect on save/reload (bug #20350)
   * Fixed [disallow_end_turn] persisting when advancing to the next scenario
     (bug #20351)
   * Fixed bug #20401: [remove_unit_overlay] did not work when the image used an