@@ -2,6 +2,8 @@ Version 1.10.6+dev:
  * Language and i18n:
    * Updated translations: Chinese (Traditional), Indonesian, Old English,
      Polish, Portuguese, Portuguese (Brazil), Russian, Vietnamese
+ * Networking:
+   * Handle an exception in the SDL_net-based network code (bug #20205)
  * User interface:
    * Fixed (bug #17220): Cursor in gui2 text box now behaves appropriately after
      text box overflow occurs.
